@@ -11,9 +11,8 @@ import com.example.coffee_shop_chain_management.response.TimesheetResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.sql.Time;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 public class TimesheetService {
@@ -22,28 +21,17 @@ public class TimesheetService {
     @Autowired
     private EmployeeRepository employeeRepository;
 
-    public List<TimesheetResponse> getAllTimesheets() {
+    public APIResponse<List<TimesheetResponse>> getAllTimesheets() {
         List<Timesheet> timesheets = timesheetRepository.findAll();
-
-        return timesheets.stream().map(timesheet -> {
-            TimesheetResponse timesheetResponse = new TimesheetResponse();
-            timesheetResponse.setTimesheetID(timesheet.getTimesheetID());
-            timesheetResponse.setDate(timesheet.getDate());
-            timesheetResponse.setShift(timesheet.getShift());
-            timesheetResponse.setEmployeeID(timesheet.getEmployee().getEmployeeID());
-            return timesheetResponse;
-        }).collect(Collectors.toList());
+         return new APIResponse<>(timesheets.stream().map(this::toTimesheetResponse).toList(), "Timesheets retrieved successfully", true);
     }
 
     public APIResponse<TimesheetResponse> createTimesheet(CreateTimesheetDTO timesheetDTO) {
 
-        if (timesheetDTO.getEmployeeId() == null) {
-            return new APIResponse<>(null, "Employee ID must not be null", false);
+        if (timesheetRepository.existsByDate(timesheetDTO.getDate())) {
+            return new APIResponse<>(null, "Timesheet already exists", false);
         }
 
-//        if (timesheetRepository.existsByDate(timesheetDTO.getDate())) {
-//            return null;
-//        }
 
         Timesheet timesheet = new Timesheet();
         timesheet.setDate(timesheetDTO.getDate());
@@ -54,6 +42,8 @@ public class TimesheetService {
         if (employee == null) {
             return new APIResponse<>(null, "Employee not found", false);
         }
+
+
         timesheet.setEmployee(employee);
 
         // Lưu timesheet vào database
@@ -64,33 +54,22 @@ public class TimesheetService {
         timesheetResponse.setTimesheetID(newTimesheet.getTimesheetID());
         timesheetResponse.setDate(newTimesheet.getDate());
         timesheetResponse.setShift(newTimesheet.getShift());
-        timesheetResponse.setEmployeeID(newTimesheet.getEmployee().getEmployeeID());
+        timesheetResponse.setEmployeeId(newTimesheet.getEmployee().getEmployeeID());
 
         return new APIResponse<>(timesheetResponse, "Timesheet created successfully", true);
 
     }
 
-    public TimesheetResponse getTimesheetById(Long id) {
-        Timesheet timesheet = timesheetRepository.findById(id).orElse(null);
-        if (timesheet == null) {
-            return null;
-        }
+    public APIResponse<TimesheetResponse> getTimesheetById(Long id) {
+        Timesheet timesheet = timesheetRepository.findById(id).
+                orElseThrow(() -> new RuntimeException("Timesheet not found!"));
 
-        TimesheetResponse timesheetResponse = new TimesheetResponse();
-        timesheetResponse.setTimesheetID(timesheet.getTimesheetID());
-        timesheetResponse.setDate(timesheet.getDate());
-        timesheetResponse.setShift(timesheet.getShift());
-        timesheetResponse.setEmployeeID(timesheet.getEmployee().getEmployeeID());
-
-        return timesheetResponse;
+        return new APIResponse<>(toTimesheetResponse(timesheet), "Timesheet retrieved successfully", true);
     }
 
-    public Timesheet updateTimesheet(Long timesheetId, UpdateTimesheetDTO timesheetDTO) {
+    public APIResponse<TimesheetResponse> updateTimesheet(Long timesheetId, UpdateTimesheetDTO timesheetDTO) {
         Timesheet timesheet = timesheetRepository.findById(timesheetId)
                 .orElseThrow(() -> new RuntimeException("Timesheet not found!"));
-
-        timesheet.setDate(timesheetDTO.getDate());
-        timesheet.setShift(timesheetDTO.getShift());
 
         if (timesheetDTO.getDate() != null) {
             timesheet.setDate(timesheetDTO.getDate());
@@ -101,14 +80,31 @@ public class TimesheetService {
         }
 
         timesheetRepository.save(timesheet);
-        return timesheet;
+        return new APIResponse<>(toTimesheetResponse(timesheet), "Timesheet updated successfully", true);
     }
 
-    public boolean deleteTimesheetById(Long id) {
+    public APIResponse<TimesheetResponse> deleteTimesheet(Timesheet timesheet) {
+        if (!timesheetRepository.existsById(timesheet.getTimesheetID())) {
+            return new APIResponse<>(null, "Timesheet not found", false);
+        }
+        timesheetRepository.delete(timesheet);
+        return new APIResponse<>(null, "Timesheet deleted successfully", true);
+    }
+
+    public APIResponse<TimesheetResponse> deleteTimesheetById(Long id) {
         if (!timesheetRepository.existsById(id)) {
-            return false;
+            return new APIResponse<>(null, "Timesheet not found", false);
         }
         timesheetRepository.deleteById(id);
-        return true;
+        return new APIResponse<>(null, "Timesheet deleted successfully", true);
+    }
+
+    public TimesheetResponse toTimesheetResponse(Timesheet timesheet) {
+        TimesheetResponse timesheetResponse = new TimesheetResponse();
+        timesheetResponse.setTimesheetID(timesheet.getTimesheetID());
+        timesheetResponse.setDate(timesheet.getDate());
+        timesheetResponse.setShift(timesheet.getShift());
+        timesheetResponse.setEmployeeId(timesheet.getEmployee().getEmployeeID());
+        return timesheetResponse;
     }
 }
